--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -84,7 +84,11 @@ header {
         font-size : 30px ; 
       }
     }
-    
+    .favori {
+      @media (min-width: map-get($breakpoints, tablette)) {
+        margin-left : 80% ; 
+      }
+    }
   }
 }
   
