--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -6,3 +6,20 @@ $black_color : #000000 ;
 
 $primary_background : #ffffff ; 
 $secondary_background : #f6f6f6 ; 
+
+$padding_none : 0 ; 
+$padding-m : 10px ; 
+$padding-l : $padding-m*2 ; 
+$padding-s : $padding-m, 2 ; 
+$padding-xl : $padding-l*2 ; 
+
+$margin_none : 0 ; 
+$margin-m : 10px ; 
+$margin-l : $margin-m*2 ; 
+$margin-s : $margin-m, 2 ; 
+$margin-xl : $margin-l*2 ; 
+
+$font-size1 : 25px ; 
+$font-size2 : 20px ; 
+$font-size3 : 18px ; 
+$font-size4 : 15px ; 
