--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -1,10 +1,10 @@
 footer {
-  font-size : 18px ; 
+  font-size : $font-size3 ; 
   color : $white_color ; 
   background-color : #353535 ;
-  padding : 10px 0px ; 
+  padding : $padding-m $padding_none ; 
   @media (min-width: map-get($breakpoints, tablette)) {
-    font-size : 22px ; 
+    font-size : $font-size2 ; 
   }
 
   .container {
@@ -14,26 +14,26 @@ footer {
     width : 97% ;
     align-items : flex-start ; 
     background-color : #353535;
-    margin-left : 10px ; 
+    margin-left : $margin-m ; 
     line-height : 30px ; 
     @media (min-width: map-get($breakpoints, tablette)) {
       width : 100% ; 
       align-items : center ; 
       line-height : 35px ; 
-      margin-left : 0 ; 
+      margin-left : $margin_none ; 
     }
       
     div {
-      margin-left : 3% ; 
+      margin-left : $margin-m ; 
       @media screen and (min-width: map-get($breakpoints, desktop)) {
-        margin : 0 ; 
+        margin : $margin_none ; 
       }
     }
   
     .ohmyfood_footer {
       filter: invert(100%); 
       width : 30% ;
-      margin : 3% ; 
+      margin : $margin-m ; 
       @media screen and (min-width: map-get($breakpoints, desktop)) {
         width : 15% ;
         margin : 1%  auto ;
