--- a/sass/pages/fonctionnement.scss
+++ b/sass/pages/fonctionnement.scss
@@ -3,22 +3,21 @@
   width : 100% ; 
   background-color : $primary_background ;
   align-items : flex-start ; 
-  margin-top : 15px ; 
+  margin : 15px 0px ; 
   @media (min-width: map-get($breakpoints, tablette)) {
-    margin : 0 auto ; 
+    margin : $margin_none $margin_none $margin-l ; 
   }
   @media screen and (min-width: map-get($breakpoints, desktop)) {
     align-items : center ; 
-    margin : 1% 0% ;
+    margin : $margin-m ;
   }
     
   h2 {
-    font-family: 'Roboto', sans-serif ; 
-    font-size : 20px ; 
+    font-size : $font-size2 ; 
     font-weight : bold ; 
-    margin : 3% ; 
+    margin : $margin-m $margin-l ; 
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      margin : 0 ; 
+      margin : $margin-m ; 
     }
   }
   
@@ -33,9 +32,7 @@
   } 
     
   .categorie { 
-    font-weight : bold ;
-    display : flex ; 
-    flex-direction : row ;
+    @include flex-center-row ; 
     align-items : center ; 
     width : 100% ; 
     @media screen and (min-width: map-get($breakpoints, desktop)) {
@@ -49,11 +46,12 @@
       padding : 15px ; 
       position : absolute ; 
       z-index : 1 ;
+      margin-left : -73% ; 
       @media (min-width: map-get($breakpoints, tablette)) {
-        margin-left : 16% ; 
+        margin-left : -55% ; 
       }
       @media screen and (min-width: map-get($breakpoints, desktop)) {
-        margin-left : 4% ;
+        margin-left : -280px ;  
       }
     }
   
@@ -67,18 +65,15 @@
       box-shadow: 2px 3px 7px #e0dede;
       border-radius : 25px ;
       width : 80% ;
-      margin : 4% ;  
-      padding : 8% 0% 8% 20% ;  
+      margin : $margin-m ;  
+      padding : 30px 0px 30px 90px ;  
       z-index : 0 ;  
       @media (min-width: map-get($breakpoints, tablette)) {
         width : 60% ;
-        margin : 2% 20% ; 
-        padding : 5% 0% 5% 15% ;
+        margin : $margin-m $margin-l ; 
       }
       @media screen and (min-width: map-get($breakpoints, desktop)) {
-        width : 60% ;
-        margin : 4% 20% ; 
-        padding : 5% 0% 5% 15% ;
+        padding : 20px 0px 20px 80px ;
       }
       &:hover {
         cursor : pointer ;
@@ -91,12 +86,13 @@
       .fa-mobile-alt, .fa-list-ul, .fa-store {
         position : absolute ;
         z-index : 1 ; 
-        font-size : 20px ; 
-        margin-left : -10% ; 
-        margin-top : -1% ;
+        font-size : $font-size2 ; 
+        left : 45px ; 
+        top : 25px ; 
         color : #7d7d7d ;  
-        @media screen and (min-width : map-get($breakpoints, desktop)) {
-          margin-left : -12% ; 
+        @media screen and (min-width: map-get($breakpoints, desktop)) {
+          left : 35px ; 
+          top : 16px ; 
         }
       }
     }  
