--- a/sass/pages/main_menu.scss
+++ b/sass/pages/main_menu.scss
@@ -4,14 +4,14 @@
   width : 100% ;
   border-radius : 10px ; 
   margin : 0 auto ; 
-  padding-top : 18% ; 
+  padding-top : $padding-xl ; 
   @media (min-width: map-get($breakpoints, tablette)) {
     @include flex-center-column ;
-    padding-top : 3% ; 
+    padding-top : $padding-m ; 
   }
   @media screen and (min-width: map-get($breakpoints, desktop)) {
     @include flex-center-row ; 
-    margin-top : 30px ; 
+    margin-top : $padding-xl ; 
   }
  
   #entrees, #plats, #desserts {
@@ -19,43 +19,45 @@
     flex-direction : column ;
     width : 90% ; 
     justify-content: center ;
-    margin : 10% auto ;
+    margin : $margin-l ;
     @media (min-width: map-get($breakpoints, tablette)) {
       width : 70% ; 
-      justify-content : center ;
-      margin : 0% 5% ;
-      padding-top : 5% ; 
+      margin : 0 $padding-l ;
+      padding-top : $padding-m ; 
     }
     @media screen and (min-width: map-get($breakpoints, desktop)) {
       width : 30% ; 
-      justify-content : space-around ; 
+      justify-content : flex-start ; 
       margin : 0 auto ;
       padding: 10px 15px ;  
     }
       
     h2 {
-      margin-left : 5% ; 
-      font-size : 22px ;  
+      margin-left : $margin-m ; 
+      font-size : $font-size1 ;  
       width : 60px ; 
       border-bottom : solid 3px $third_color ;
-      padding-bottom : 12px ; 
-      margin-bottom : 5% ; 
+      padding-bottom : $padding-m ; 
+      margin-bottom : $margin-l ; 
     }
       
     .entrees, .plats, .desserts {
       background-color: $primary_background;
       display : flex ; 
       @include flex-center-row ;
-      margin : 4% auto ; 
+      margin : $margin-m ; 
       height : 60px ;
       border-radius : 10px ; 
       width : 90% ; 
+      @media (min-width: map-get($breakpoints, tablette)) {
+        margin : $margin-m auto ; 
+        width : 80% ; 
+      }
       @media screen and (min-width: map-get($breakpoints, desktop)) {
         width : 100% ;
         flex-direction : row ;
         justify-content : space-between ;
         box-shadow : 4px 3px 5px #635d5d ; 
-        margin : 8px ;   
       }
         
       .menu {
@@ -70,12 +72,11 @@
           -moz-text-overflow : '...' ; 
         text-overflow: '...';
         @media screen and (min-width: map-get($breakpoints, desktop)) {
-          padding-left : 5px ; 
+          padding-left : $padding-m ; 
         }
     
         h3 {
-          font-family : 'Roboto', sans-serif ; 
-          font-size : 20px ;
+          font-size : $font-size3 ;
           font-weight : bold ; 
           margin : 10px 10px 0px 10px; 
           overflow : hidden ; 
@@ -89,10 +90,10 @@
           display : flex ; 
           flex-direction : row ;
           justify-content : space-between ;
-          margin : 0px 10px 10px 10px ; 
+          margin : $margin-m ; 
             
           .supplement {
-            font-size : 18px ; 
+            font-size : $font-size3 ; 
             padding : 2px 0px 4px 0px ; 
             margin-bottom : 3px ;
             font-weight : normal ; 
@@ -103,16 +104,13 @@
           }
       
           .prix {
-            font-size : 20px ; 
+            font-size : $font-size2 ; 
             font-weight : bold ; 
-            margin-right : 5px ;
+            margin-right : $margin-l ;
           }
         }
       }
-       
-      .fa-check-circle {
-        color : $primary_background ;          
-      }    
+      
     }
   }
 }
