--- a/sass/themes/animation_check_circle.scss
+++ b/sass/themes/animation_check_circle.scss
@@ -1,10 +1,13 @@
 .entrees, .plats, .desserts {
   overflow : hidden ; 
+  &:hover {
+    padding-left : 2.5px ; 
+  }
   &:hover .check-circle {
     cursor : pointer ;
-      -moz-transform : translateX(-15px) ; 
-      -webkit-transform : translateX(-15px) ;
-    transform : translateX(-15px) ;
+      -moz-transform : translateX(-20px) ; 
+      -webkit-transform : translateX(-20px) ;
+    transform : translateX(-20px) ;
       -moz-transition : transform 0.2s ease-out ;
       -webkit-transition : transform 0.2s ease-out ; 
     transition : transform 0.2s ease-out ;
@@ -27,7 +30,7 @@
 }
 
 .check-circle {
-  margin-right : -15px ; 
+  margin-right : -20px ; 
 }
 
 .fa-check-circle:before {
