--- a/sass/base/body.scss
+++ b/sass/base/body.scss
@@ -9,7 +9,7 @@ body {
   font-size : $font-size4 ;
   font-family: 'Roboto', sans-serif ;
   line-height : 12px ; 
-  color : $black_color ;
+  color : #000000 ;
 }
 
 .container {
