--- a/sass/components/btn_commander.scss
+++ b/sass/components/btn_commander.scss
@@ -1,5 +1,5 @@
 .btn_commander {
-  color : $white_color ; 
+  color : #FFFFFF ; 
   text-align : center ;
     -webkit-background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
     -moz-background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
