--- a/sass/pages/main_restaurants.scss
+++ b/sass/pages/main_restaurants.scss
@@ -104,7 +104,7 @@
           h3, .lieu {
             margin : 5px ;
             font-family : 'Roboto', sans-serif ; 
-            color : $black_color ; 
+            color : #000000 ; 
           }
             
           h3 {
