--- a/sass/components/btn_explorer.scss
+++ b/sass/components/btn_explorer.scss
@@ -1,5 +1,5 @@
 .btn_explorer {
-  color : $white_color ; 
+  color : #FFFFFF ; 
   text-align : center ; 
     -webkit-background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
     -moz-background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
