--- a/sass/themes/loading_spinner.scss
+++ b/sass/themes/loading_spinner.scss
@@ -1,6 +1,7 @@
 body #loading_spinner {
-  background-color: $black_color ;
+  background-color: #000000 ;
   width : 100% ; 
+  height : 100% ; 
   position: absolute ;
   z-index : 2 ;
     -moz-animation-duration : 3s ;
