--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -1,8 +1,6 @@
 $primary_color : #9356DC ;
 $secondary_color : #FF79DA ; 
 $third_color : #99E2D0 ; 
-$white_color : #ffffff ; 
-$black_color : #000000 ; 
 
 $primary_background : #ffffff ; 
 $secondary_background : #f6f6f6 ; 
@@ -10,13 +8,13 @@ $secondary_background : #f6f6f6 ;
 $padding_none : 0 ; 
 $padding-m : 10px ; 
 $padding-l : $padding-m*2 ; 
-$padding-s : $padding-m, 2 ; 
+$padding-s : $padding-m/2 ; 
 $padding-xl : $padding-l*2 ; 
 
 $margin_none : 0 ; 
 $margin-m : 10px ; 
 $margin-l : $margin-m*2 ; 
-$margin-s : $margin-m, 2 ; 
+$margin-s : $margin-m/2 ; 
 $margin-xl : $margin-l*2 ; 
 
 $font-size1 : 25px ; 
