--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -26,7 +26,7 @@ body {
 }
 
 .btn_explorer {
-  color: #ffffff;
+  color: #FFFFFF;
   text-align: center;
   -webkit-background: linear-gradient(to right bottom, #FF79DA, #9356DC);
   -moz-background: linear-gradient(to right bottom, #FF79DA, #9356DC);
@@ -125,7 +125,7 @@ body {
 }
 .favori .empty {
   transition: all 1.5s linear;
-  z-index: 10;
+  z-index: 2;
   background: #000000;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -150,7 +150,7 @@ body {
 }
 
 .btn_commander {
-  color: #ffffff;
+  color: #FFFFFF;
   text-align: center;
   -webkit-background: linear-gradient(to right bottom, #FF79DA, #9356DC);
   -moz-background: linear-gradient(to right bottom, #FF79DA, #9356DC);
@@ -319,7 +319,7 @@ header .restaurant_nom h1 {
 
 footer {
   font-size: 18px;
-  color: #ffffff;
+  color: #cac8c8;
   background-color: #353535;
   padding: 10px 0;
 }
@@ -369,15 +369,15 @@ footer .container .footer_liste {
   font-weight: bold;
 }
 footer .container .footer_liste .fa-utensils {
-  color: #ffffff;
+  color: #FFFFFF;
   font-size: 15px;
 }
 footer .container .footer_liste .fa-hands-helping {
-  color: #ffffff;
+  color: #FFFFFF;
   font-size: 10px;
 }
 footer .container a {
-  color: #ffffff;
+  color: #FFFFFF;
   text-decoration: none;
 }
 
@@ -440,7 +440,7 @@ footer .container a {
 }
 #fonctionnement .categorie .nombre {
   background-color: #9356DC;
-  color: #ffffff;
+  color: #FFFFFF;
   clip-path: circle(40%);
   padding: 15px;
   position: absolute;
@@ -769,6 +769,7 @@ footer .container a {
   margin: 10px;
   height: 60px;
   border-radius: 10px;
+  box-shadow: 4px 3px 5px #635d5d;
   width: 90%;
 }
 @media (min-width: 767px) {
@@ -780,7 +781,6 @@ footer .container a {
 @media screen and (min-width: 1000px) {
   #menus #entrees .entrees, #menus #entrees .plats, #menus #entrees .desserts, #menus #plats .entrees, #menus #plats .plats, #menus #plats .desserts, #menus #desserts .entrees, #menus #desserts .plats, #menus #desserts .desserts {
     justify-content: space-between;
-    box-shadow: 4px 3px 5px #635d5d;
   }
 }
 #menus #entrees .entrees .menu, #menus #entrees .plats .menu, #menus #entrees .desserts .menu, #menus #plats .entrees .menu, #menus #plats .plats .menu, #menus #plats .desserts .menu, #menus #desserts .entrees .menu, #menus #desserts .plats .menu, #menus #desserts .desserts .menu {
@@ -835,6 +835,7 @@ footer .container a {
 body #loading_spinner {
   background-color: #000000;
   width: 100%;
+  height: 100%;
   position: absolute;
   z-index: 2;
   -moz-animation-duration: 3s;
