modification style, margin, padding, et animation des deux coeurs

--- a/sass/components/animation_coeurs.scss
+++ b/sass/components/animation_coeurs.scss
@@ -1,36 +1,48 @@
 .favori {
-  margin : 0% 15% 7% 0% ; 
-  .empty {
-    position : absolute ;
-    color : $black_color ; 
-    font-size : 40px ; 
-    transform : scale(1) ;
-    &:hover {
-      opacity : 0 ; 
-      color : transparent ; 
-      transform : scale(0.5) ; 
-      transition : transform 1s ease-in ; 
-    }    
-  }
-  .full {
-    position : absolute ;
-    opacity : 0 ; 
-    font-size : 40px ; 
+  position : absolute ; 
+  bottom : 10px ;
+  right : 20px ; 
+  height : 30px ; 
+  width : 30px ; 
+  transform : translateY(-50%) ; 
+  
+  .fa-heart {
+    color : transparent ; 
+    position : absolute ; 
+    inset : 0px ; 
+    font-size : 30px ; 
+    text-align : center ; 
     &:hover {
       cursor : pointer ; 
-      position : absolute ; 
-        background : -webkit-gradient(linear, left bottom, right top, from($secondary_color), to($primary_color));
-        background : -moz-gradient(linear, left bottom, right top, from($secondary_color), to($primary_color));
-      background : gradient(linear, left bottom, right top, from($secondary_color), to($primary_color));
-        -webkit-background-clip : text ; 
-        -moz-background-clip : text ;
-      background-clip : text ;
-        -webkit-text-fill-color : transparent ; 
-        -moz-text-fill-color : transparent ; 
-      color : transparent ;     
-      opacity : 1 ; 
-      transform-origin: bottom ;
-      transition : opacity 2s ease-in-out;
-    }  
+    }
+  }
+
+  .empty {
+    transition : all 1.5s linear ; 
+    z-index : 2 ; 
+    background : #000000 ; 
+    -webkit-background-clip : text ;
+    -webkit-text-fill-color : transparent ; 
+  }
+
+  .full {
+    transition : 1s ease-in-out ; 
+    font-size : 30px ;
+    background : linear-gradient($primary_color, $secondary_color) ; 
+    -webkit-background-clip : text ; 
+    -webkit-text-fill-color : transparent ; 
+    transform-origin : bottom ; 
+    transform : scale(0) ; 
+    z-index : 1 ; 
+  }
+
+  &:hover .full {
+    transform : scale(1) ; 
+  }
+
+  &:hover .empty {
+    background : transparent ; 
+    -webkit-background-clip : text ; 
+    -webkit-text-fill-color : transparent ; 
   }
 }
