--- a/sass/pages/fonctionnement.scss
+++ b/sass/pages/fonctionnement.scss
@@ -41,7 +41,7 @@
   
     .nombre {
       background-color: $primary_color;
-      color : $white_color ; 
+      color : #FFFFFF ; 
       clip-path: circle(40%);
       padding : 15px ; 
       position : absolute ; 
@@ -51,7 +51,7 @@
         margin-left : -55% ; 
       }
       @media screen and (min-width: map-get($breakpoints, desktop)) {
-        margin-left : -15% ;  
+        margin-left : -280px ;  
       }
     }
   
@@ -66,7 +66,7 @@
       border-radius : 25px ;
       width : 80% ;
       margin : $margin-m ;  
-      padding : 30px 90px ;  
+      padding : 30px 0px 30px 90px ;  
       z-index : 0 ;  
       @media (min-width: map-get($breakpoints, tablette)) {
         width : 60% ;
@@ -78,7 +78,7 @@
       &:hover {
         cursor : pointer ;
         background-color: lighten($primary-color, 35%) ;
-        color : $black_color ; 
+        color : #000000 ; 
         .fa-mobile-alt, .fa-list-ul, .fa-store {
           color : darken($primary-color, 15%) ; 
         }
