--- a/sass/themes/loading_spinner.scss
+++ b/sass/themes/loading_spinner.scss
@@ -1,11 +1,12 @@
 body #loading_spinner {
-  background-color: $black_color ;
+  background-color: #000000 ;
   width : 100% ; 
+  height : 100% ; 
   position: absolute ;
   z-index : 2 ;
-    -moz-animation-duration : 2.5s ;
-    -webkit-animation-duration : 2.5s ;
-  animation-duration : 2.5s ;
+    -moz-animation-duration : 3s ;
+    -webkit-animation-duration : 3s ;
+  animation-duration : 3s ;
     -moz-animation-iteration-count : 1 ;
     -webkit-animation-iteration-count : 1 ;
   animation-iteration-count : 1 ;
@@ -64,8 +65,8 @@ body #loading_spinner {
     z-index : 4 ; 
     top: 0;
     left: 0;
-    width : 164px ; 
-    height : 164px ; 
+    width : 180px ; 
+    height : 180px ; 
     margin : 30% ; 
     border-radius: 50%;
     @media (min-width: map-get($breakpoints, tablette)) {
@@ -90,9 +91,9 @@ body #loading_spinner {
           -webkit-animation-timing-function : linear ;
           -moz-animation-timing-function : linear ;
         animation-timing-function : linear ;
-          -webkit-animation-iteration-count : 4 ;
-          -moz-animation-iteration-count : 4 ;
-        animation-iteration-count : 4 ;
+          -webkit-animation-iteration-count : 5 ;
+          -moz-animation-iteration-count : 5 ;
+        animation-iteration-count : 5 ;
           -webkit-animation-direction : normal ;
           -moz-animation-direction : normal ;
         animation-direction : normal ;
@@ -119,99 +120,96 @@ body #loading_spinner {
         -moz-animation-delay : 0s ;
       animation-delay : 0s ;
     }
+    @keyframes rotate1 {
+      from {
+        transform: rotateX(35deg) rotateY(-45deg) rotateZ(0);
+        opacity : 1 ;
+      }
+      to {
+        transform: rotateX(35deg) rotateY(-45deg) rotateZ(1turn);
+        opacity : 0 ;
+      }
+    }
+      
+    @keyframes rotate2 {
+      from {
+        transform: rotateX(50deg) rotateY(10deg) rotateZ(0);
+        opacity : 1 ;
+      }
+      to {
+        transform: rotateX(50deg) rotateY(10deg) rotateZ(1turn);
+        opacity : 0 ; 
+      }
+    }
+      
+    @keyframes rotate3 {
+      from {
+        transform: rotateX(35deg) rotateY(55deg) rotateZ(0);
+        opacity : 1 ; 
+      }
+      to {
+        transform: rotateX(35deg) rotateY(55deg) rotateZ(1turn);
+        opacity : 0 ; 
+      }
+    }
   }
-}
   
-@keyframes rotate1 {
-  from {
-    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0);
-    opacity : 1 ;
-  }
-  to {
-    transform: rotateX(35deg) rotateY(-45deg) rotateZ(1turn);
-    opacity : 0 ;
-  }
-}
-  
-@keyframes rotate2 {
-  from {
-    transform: rotateX(50deg) rotateY(10deg) rotateZ(0);
-    opacity : 1 ;
-  }
-  to {
-    transform: rotateX(50deg) rotateY(10deg) rotateZ(1turn);
+  .ohmyfood {
+    filter: invert(100%); 
+    position : absolute ;
+    z-index : 5 ;
+    width : 50% ; 
+    top : 200px ; 
+    left : 130px ; 
     opacity : 0 ; 
-  }
-}
-  
-@keyframes rotate3 {
-  from {
-    transform: rotateX(35deg) rotateY(55deg) rotateZ(0);
-    opacity : 1 ; 
-  }
-  to {
-    transform: rotateX(35deg) rotateY(55deg) rotateZ(1turn);
-    opacity : 0 ; 
-  }
-}
-  
-.ohmyfood {
-  filter: invert(100%); 
-  position : absolute ;
-  z-index : 5 ;
-  top: 0;
-  left: 0;
-  width : 50% ; 
-  margin : 40% 25% ;
-  @media (min-width: map-get($breakpoints, tablette)) {
-    width : 40% ; 
-    margin : 25% 30%;
-  }
-  @media screen and (min-width: map-get($breakpoints, desktop)) {
-    width : 25% ;
-    margin : 15% 40% ;
-  }
-    -moz-animation-duration : 0.3s ;
-    -webkit-animation-duration : 0.3s ;
-  animation-duration : 0.3s ;
-    -moz-animation-iteration-count : 1 ;
-    -webkit-animation-iteration-count : 1 ;
-  animation-iteration-count : 1 ;
-    -moz-animation-direction : normal ;
-    -webkit-animation-direction : normal ;
-  animation-direction : normal ;
-    -moz-animation-name : logo ;
-    -webkit-animation-name : logo ;
-  animation-name : logo ;
-    -moz-transition-property : top, bottom ;
-    -webkit-transition-property : top, bottom ;
-  transition-property : top, bottom ;
-    -moz-animation-timing-function : ease-in ;
-    -webkit-animation-timing-function : ease-in ;
-  animation-timing-function : ease-in ;
-    -moz-animation-fill-mode : none ;
-    -webkit-animation-fill-mode : none ;
-  animation-fill-mode : none ;
-    -webkit-animation-delay : 2.75s ; 
-    -moz-animation-delay : 2.75s ; 
-  animation-delay : 2.75s ;
-  
-  @keyframes logo {
-    0% {
-      margin-top : 0%;
-      opacity : 0 ;
+    @media (min-width: map-get($breakpoints, tablette)) {
+      width : 40% ; 
+      top : 210px ; 
+      left : 300px ; 
     }
-    10% {
-      margin-top : 100% ;
-      opacity : 1 ; 
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+      width : 25% ;
+      top : 260px ; 
+      left : 700px ; 
     }
-    90% {
-      margin-top : 100% ;
-      opacity : 1 ;
-    }
-    100% {
-      margin-top : 0% ; 
-      opacity : 0 ; 
+      -moz-animation-duration : 0.5s ;
+      -webkit-animation-duration : 0.5s ;
+    animation-duration : 0.5s ;
+      -moz-animation-iteration-count : 1 ;
+      -webkit-animation-iteration-count : 1 ;
+    animation-iteration-count : 1 ;
+      -moz-animation-direction : normal ;
+      -webkit-animation-direction : normal ;
+    animation-direction : normal ;
+      -moz-animation-name : logo ;
+      -webkit-animation-name : logo ;
+    animation-name : logo ;
+      -moz-animation-timing-function : ease-out ;
+      -webkit-animation-timing-function : ease-out ;
+    animation-timing-function : ease-out ;
+      -moz-animation-fill-mode : none ;
+      -webkit-animation-fill-mode : none ;
+    animation-fill-mode : none ;
+      -webkit-animation-delay : 2s ; 
+      -moz-animation-delay : 2s ; 
+    animation-delay : 2s ;
+    
+    @keyframes logo {
+      0% {
+        opacity : 0 ;
+      }
+      10% {
+        opacity : 0.3 ; 
+      }
+      20% {
+        opacity : 1 ; 
+      }
+      90% {
+        opacity : 0.5 ;
+      }
+      100% {
+        opacity : 0 ; 
+      }
     }
   }
 }
