--- a/sass/components/btn_explorer.scss
+++ b/sass/components/btn_explorer.scss
@@ -19,7 +19,8 @@
   @media screen and (min-width:map-get($breakpoints, desktop)) {
     margin : 3% 45% ; 
   }
-   
+  transition : opacity 0.2s ease-out;
+
   &:hover {
     cursor : pointer ; 
     &::before {
@@ -32,9 +33,9 @@
         -webkit-transform : scaleX(1) ; 
         -moz-transform : scaleX(1) ;
       transform : scaleX(1) ;
-        -webkit-transform-origin : left ; 
-        -moz-transform-origin : left ;
-      transform-origin : left ;
+        -webkit-transform-origin : top ; 
+        -moz-transform-origin : top ;
+      transform-origin : top ;
     }
   }
 
@@ -58,13 +59,11 @@
       -webkit-transform : scaleX(0) ; 
       -moz-transform : scaleX(0) ;
     transform : scaleX(0) ;
-      -webkit-transform-origin : right ; 
-      -moz-transform-origin : right ;
-    transform-origin : right ;
-      -webkit-transition : transform, .05s ; 
-      -moz-transition : transform, .05s ; 
-    transition : transform .05s ; 
+      -webkit-transform-origin : bottom ; 
+      -moz-transform-origin : bottom ;
+    transform-origin : bottom ;
+      -webkit-transition : transform, .2s ; 
+      -moz-transition : transform, .2s ; 
+    transition : transform .2s ; 
   }
 }
-
-
