--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -1,6 +1,6 @@
 footer {
   font-size : $font-size3 ; 
-  color : #cac8c8 ; 
+  color : #D7D7D7 ; 
   background-color : #353535 ;
   padding : $padding-m $padding_none ; 
   @media (min-width: map-get($breakpoints, tablette)) {
@@ -44,18 +44,18 @@ footer {
       font-weight : bold ; 
          
       .fa-utensils {
-        color : #FFFFFF ; 
+        color : #D7D7D7 ; 
         font-size : 15px ; 
       }
       .fa-hands-helping {
-        color : #FFFFFF ; 
+        color : #D7D7D7 ; 
         font-size : 10px ; 
       }
       
     }
         
     a {
-      color : #FFFFFF ; 
+      color : #D7D7D7 ; 
       text-decoration : none ; 
     }
   }
