--- a/sass/pages/fonctionnement.scss
+++ b/sass/pages/fonctionnement.scss
@@ -3,7 +3,7 @@
   width : 100% ; 
   background-color : $primary_background ;
   align-items : flex-start ; 
-  margin : 15px 0px ; 
+  margin : 30px 0px ; 
   @media (min-width: map-get($breakpoints, tablette)) {
     margin : $margin_none $margin_none $margin-l ; 
   }
@@ -13,9 +13,9 @@
   }
     
   h2 {
-    font-size : $font-size2 ; 
+    font-size : $font-size1 ; 
     font-weight : bold ; 
-    margin : $margin-m $margin-l ; 
+    margin : $margin-l ; 
     @media screen and (min-width: map-get($breakpoints, desktop)) {
       margin : $margin-m ; 
     }
@@ -98,4 +98,3 @@
     }  
   }
 }
-
