--- a/sass/pages/main_restaurants.scss
+++ b/sass/pages/main_restaurants.scss
@@ -2,7 +2,7 @@
   @include flex-center-column ;
   background-color : $secondary_background;
   align-items : flex-start ;  
-  padding : $padding-l ;   
+  padding : 50px 25px ;   
   @media screen and (min-width: map-get($breakpoints, desktop)) {
     align-items : center ; 
     border-radius : 20px ;
@@ -10,8 +10,9 @@
   }
     
   h2 { 
-    font-size : $font-size2 ; 
+    font-size : $font-size1 ; 
     font-weight : bold ; 
+    margin-bottom : 20px ; 
   }
 
   .liste_restaurants {
@@ -75,7 +76,7 @@
         font-weight : bold ; 
         text-align : center ; 
         position : absolute ; 
-        padding : 5px ; 
+        padding : 10px ; 
         z-index : 1 ;
         right : 15px ;
         top : 15px ; 
@@ -91,7 +92,7 @@
           display : flex ; 
           flex-direction : column ; 
           flex-wrap : nowrap ; 
-          margin : 2% ; 
+          margin : $margin-m ; 
           width : 80% ; 
               
           h3, .lieu {
@@ -106,7 +107,8 @@
           }
 
           .lieu {
-            font-size : 17px ; 
+            font-size : 17px ;
+            font-weight : normal ;  
           }
 
         }
