--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
   padding: 17px 0px;
   margin: 4% 30% 8%;
   position: relative;
+  transition: opacity 0.2s ease-out;
 }
 @media (min-width: 767px) {
   .btn_explorer {
@@ -64,9 +65,9 @@ body {
   -webkit-transform: scaleX(1);
   -moz-transform: scaleX(1);
   transform: scaleX(1);
-  -webkit-transform-origin: left;
-  -moz-transform-origin: left;
-  transform-origin: left;
+  -webkit-transform-origin: top;
+  -moz-transform-origin: top;
+  transform-origin: top;
 }
 .btn_explorer span {
   position: relative;
@@ -87,12 +88,12 @@ body {
   -webkit-transform: scaleX(0);
   -moz-transform: scaleX(0);
   transform: scaleX(0);
-  -webkit-transform-origin: right;
-  -moz-transform-origin: right;
-  transform-origin: right;
-  -webkit-transition: transform, 0.05s;
-  -moz-transition: transform, 0.05s;
-  transition: transform 0.05s;
+  -webkit-transform-origin: bottom;
+  -moz-transform-origin: bottom;
+  transform-origin: bottom;
+  -webkit-transition: transform, 0.2s;
+  -moz-transition: transform, 0.2s;
+  transition: transform 0.2s;
 }
 
 .favori {
@@ -113,14 +114,14 @@ body {
 .favori .fa-heart:hover {
   cursor: pointer;
 }
-.favori .empty {
+.favori .far {
   transition: all 1.5s linear;
   z-index: 2;
   background: #000000;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.favori .full {
+.favori .fas {
   transition: 1s ease-in-out;
   font-size: 30px;
   background: linear-gradient(#9356DC, #FF79DA);
@@ -130,10 +131,10 @@ body {
   transform: scale(0);
   z-index: 1;
 }
-.favori:hover .full {
+.favori:hover .fas {
   transform: scale(1);
 }
-.favori:hover .empty {
+.favori:hover .far {
   background: transparent;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -152,6 +153,7 @@ body {
   margin: 1% 26% 20% 26%;
   padding: 15px 50px;
   position: relative;
+  transition: opacity 0.2s ease-out;
 }
 @media (min-width: 767px) {
   .btn_commander {
@@ -176,9 +178,9 @@ body {
   -webkit-transform: scaleX(1);
   -moz-transform: scaleX(1);
   transform: scaleX(1);
-  -webkit-transform-origin: left;
-  -moz-transform-origin: left;
-  transform-origin: left;
+  -webkit-transform-origin: top;
+  -moz-transform-origin: top;
+  transform-origin: top;
 }
 .btn_commander span {
   position: relative;
@@ -199,12 +201,12 @@ body {
   -webkit-transform: scaleX(0);
   -moz-transform: scaleX(0);
   transform: scaleX(0);
-  -webkit-transform-origin: right;
-  -moz-transform-origin: right;
-  transform-origin: right;
-  -webkit-transition: transform, 0.01s;
-  -moz-transition: transform, 0.01s;
-  transition: transform 0.01s;
+  -webkit-transform-origin: bottom;
+  -moz-transform-origin: bottom;
+  transform-origin: bottom;
+  -webkit-transition: transform, 0.2s;
+  -moz-transition: transform, 0.2s;
+  transition: transform 0.2s;
 }
 
 header {
@@ -233,12 +235,12 @@ header .fa-arrow-left {
 }
 header #logo_header {
   width: 40%;
-  margin: 3% 30%;
+  display: block;
+  margin: 10px auto;
 }
 @media screen and (min-width: 1000px) {
   header #logo_header {
     width: 30%;
-    margin: 0% 35%;
   }
 }
 header #photo_header {
@@ -261,29 +263,32 @@ header .restaurant_nom {
   flex-direction: row;
   align-items: center;
   border-radius: 30px 30px 0px 0px;
-  position: relative;
+  position: absolute;
   padding-top: 20px;
   z-index: 2;
-  margin-left: 0px;
-  margin-top: -35px;
+  top: 250px;
+}
+@media (min-width: 767px) {
+  header .restaurant_nom {
+    top: 260px;
+  }
 }
 @media screen and (min-width: 1000px) {
   header .restaurant_nom {
     background-color: #ffffff;
     border-radius: 30px;
     width: 40%;
-    margin-left: 30%;
+    top: 350px;
+    left: 570px;
   }
 }
 header .restaurant_nom h1 {
   width: 80%;
   padding-left: 10px;
   font-family: "Shrikhand", "cursive";
-  font-size: 25px;
+  font-size: 30px;
   font-weight: bold;
-  letter-spacing: 1.5px;
   text-align: left;
-  line-height: 0px;
   margin-left: 10px;
 }
 @media (min-width: 767px) {
@@ -301,15 +306,15 @@ header .restaurant_nom h1 {
     font-size: 30px;
   }
 }
-@media (min-width: 767px) {
-  header .restaurant_nom .favori {
-    margin-left: 80%;
-  }
+header .restaurant_nom .favori {
+  position: absolute;
+  top: 45px;
+  right: 40px;
 }
 
 footer {
   font-size: 18px;
-  color: #cac8c8;
+  color: #D7D7D7;
   background-color: #353535;
   padding: 10px 0;
 }
@@ -359,15 +364,15 @@ footer .container .footer_liste {
   font-weight: bold;
 }
 footer .container .footer_liste .fa-utensils {
-  color: #FFFFFF;
+  color: #D7D7D7;
   font-size: 15px;
 }
 footer .container .footer_liste .fa-hands-helping {
-  color: #FFFFFF;
+  color: #D7D7D7;
   font-size: 10px;
 }
 footer .container a {
-  color: #FFFFFF;
+  color: #D7D7D7;
   text-decoration: none;
 }
 
@@ -378,7 +383,7 @@ footer .container a {
   width: 100%;
   background-color: #ffffff;
   align-items: flex-start;
-  margin: 15px 0px;
+  margin: 30px 0px;
 }
 @media (min-width: 767px) {
   #fonctionnement {
@@ -392,9 +397,9 @@ footer .container a {
   }
 }
 #fonctionnement h2 {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
-  margin: 10px 20px;
+  margin: 20px;
 }
 @media screen and (min-width: 1000px) {
   #fonctionnement h2 {
@@ -540,7 +545,7 @@ footer .container a {
   #accueil h1 {
     line-height: 20px;
     width: 70%;
-    padding-top: 2%;
+    padding-top: 20px;
   }
 }
 @media screen and (min-width: 1000px) {
@@ -571,7 +576,7 @@ footer .container a {
   justify-content: center;
   background-color: #f6f6f6;
   align-items: flex-start;
-  padding: 20px;
+  padding: 50px 25px;
 }
 @media screen and (min-width: 1000px) {
   #restaurants {
@@ -581,8 +586,9 @@ footer .container a {
   }
 }
 #restaurants h2 {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
+  margin-bottom: 20px;
 }
 #restaurants .liste_restaurants {
   display: flex;
@@ -652,7 +658,7 @@ footer .container a {
   font-weight: bold;
   text-align: center;
   position: absolute;
-  padding: 5px;
+  padding: 10px;
   z-index: 1;
   right: 15px;
   top: 15px;
@@ -667,7 +673,7 @@ footer .container a {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  margin: 2%;
+  margin: 10px;
   width: 80%;
 }
 #restaurants .liste_restaurants .restaurant .description .informations h3, #restaurants .liste_restaurants .restaurant .description .informations .lieu {
@@ -681,6 +687,7 @@ footer .container a {
 }
 #restaurants .liste_restaurants .restaurant .description .informations .lieu {
   font-size: 17px;
+  font-weight: normal;
 }
 
 #menus {
@@ -699,28 +706,23 @@ footer .container a {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    padding-top: 10px;
   }
 }
 @media screen and (min-width: 1000px) {
   #menus {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     margin-top: 40px;
   }
 }
 #menus #entrees, #menus #plats, #menus #desserts {
   display: flex;
   flex-direction: column;
-  width: 90%;
   justify-content: center;
-  margin: 20px;
+  width: 90%;
+  margin: 40px 20px;
 }
 @media (min-width: 767px) {
   #menus #entrees, #menus #plats, #menus #desserts {
     width: 45%;
-    margin: 10px;
   }
 }
 @media screen and (min-width: 1000px) {
@@ -733,8 +735,10 @@ footer .container a {
 }
 #menus #entrees h2, #menus #plats h2, #menus #desserts h2 {
   margin-left: 10px;
-  font-size: 25px;
-  width: 60px;
+  font-size: 20px;
+  font-weight: normal;
+  color: #665959;
+  width: 50px;
   border-bottom: solid 3px #99E2D0;
   padding-bottom: 10px;
   margin-bottom: 20px;
@@ -742,12 +746,10 @@ footer .container a {
 #menus #entrees .entrees, #menus #entrees .plats, #menus #entrees .desserts, #menus #plats .entrees, #menus #plats .plats, #menus #plats .desserts, #menus #desserts .entrees, #menus #desserts .plats, #menus #desserts .desserts {
   background-color: #ffffff;
   display: flex;
-  display: flex;
   flex-direction: row;
   justify-content: center;
-  margin: 10px;
-  height: 60px;
-  border-radius: 10px;
+  margin: 20px 10px;
+  border-radius: 20px;
   box-shadow: 4px 3px 5px #635d5d;
   width: 90%;
 }
@@ -767,7 +769,6 @@ footer .container a {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 65px;
   white-space: nowrap;
   overflow: hidden;
   -webkit-text-overflow: "....";
@@ -787,7 +788,7 @@ footer .container a {
   -webkit-text-overflow: "...";
   -moz-text-overflow: "...";
   text-overflow: "...";
-  padding: 2px 0px 17px 0px;
+  padding: 10px 0px;
 }
 #menus #entrees .entrees .menu .informations, #menus #entrees .plats .menu .informations, #menus #entrees .desserts .menu .informations, #menus #plats .entrees .menu .informations, #menus #plats .plats .menu .informations, #menus #plats .desserts .menu .informations, #menus #desserts .entrees .menu .informations, #menus #desserts .plats .menu .informations, #menus #desserts .desserts .menu .informations {
   display: flex;
@@ -807,14 +808,14 @@ footer .container a {
 }
 #menus #entrees .entrees .menu .informations .prix, #menus #entrees .plats .menu .informations .prix, #menus #entrees .desserts .menu .informations .prix, #menus #plats .entrees .menu .informations .prix, #menus #plats .plats .menu .informations .prix, #menus #plats .desserts .menu .informations .prix, #menus #desserts .entrees .menu .informations .prix, #menus #desserts .plats .menu .informations .prix, #menus #desserts .desserts .menu .informations .prix {
   font-size: 20px;
-  font-weight: bold;
   margin-right: 20px;
 }
 
 body #loading_spinner {
   background-color: #000000;
+  box-sizing: border-box;
   width: 100%;
-  height: 100%;
+  height: 2280px;
   position: absolute;
   z-index: 2;
   -moz-animation-duration: 3s;
@@ -839,12 +840,25 @@ body #loading_spinner {
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
+@media (min-width: 767px) {
+  body #loading_spinner {
+    height: 1720px;
+  }
+}
+@media screen and (min-width: 1000px) {
+  body #loading_spinner {
+    height: 1240px;
+  }
+}
 @keyframes loading_spinner {
   0% {
     opacity: 1;
   }
+  90% {
+    opacity: 0.9;
+  }
   95% {
-    opacity: 1;
+    opacity: 0.7;
   }
   100% {
     opacity: 0;
@@ -1018,9 +1032,9 @@ body #loading_spinner {
   top: 200px;
   left: 130px;
   opacity: 0;
-  -moz-animation-duration: 0.5s;
-  -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
+  -moz-animation-duration: 0.7s;
+  -webkit-animation-duration: 0.7s;
+  animation-duration: 0.7s;
   -moz-animation-iteration-count: 1;
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
@@ -1064,18 +1078,15 @@ body #loading_spinner {
   20% {
     opacity: 1;
   }
-  90% {
-    opacity: 0.5;
-  }
   100% {
     opacity: 0;
   }
 }
 
 #entrees, .entrees, #plats, .plats, #desserts, .desserts {
-  -moz-animation-duration: 0.5s;
-  -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
+  -moz-animation-duration: 0.7s;
+  -webkit-animation-duration: 0.7s;
+  animation-duration: 0.7s;
   -moz-animation-iteration-count: 1;
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
@@ -1130,6 +1141,11 @@ body #loading_spinner {
 .entrees:hover, .plats:hover, .desserts:hover {
   padding-left: 2.5px;
 }
+@media screen and (min-width: 1000px) {
+  .entrees:hover, .plats:hover, .desserts:hover {
+    padding-left: 0;
+  }
+}
 .entrees:hover .check-circle, .plats:hover .check-circle, .desserts:hover .check-circle {
   cursor: pointer;
   -moz-transform: translateX(-20px);
@@ -1142,8 +1158,8 @@ body #loading_spinner {
   border-radius: 0px 10px 10px 0px;
 }
 .entrees:hover .check-circle .fa-check-circle, .plats:hover .check-circle .fa-check-circle, .desserts:hover .check-circle .fa-check-circle {
-  font-size: 30px;
-  padding: 15px;
+  font-size: 25px;
+  padding: 27px;
   -webkit-background-clip: text;
   -moz-background-clip: text;
   background-clip: text;
