--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -43,13 +43,13 @@ footer {
     .footer_liste {
       font-weight : bold ; 
          
-      .fa-utensils {
+      i.fa-utensils {
         color : #D7D7D7 ; 
-        font-size : 15px ; 
+        width : 15px ; 
       }
-      .fa-hands-helping {
+      i.fa-hands-helping {
         color : #D7D7D7 ; 
-        font-size : 10px ; 
+        width : 10px ; 
       }
       
     }
