--- a/style.css
+++ b/style.css
@@ -363,13 +363,13 @@ footer .container .ohmyfood_footer {
 footer .container .footer_liste {
   font-weight: bold;
 }
-footer .container .footer_liste .fa-utensils {
+footer .container .footer_liste i.fa-utensils {
   color: #D7D7D7;
-  font-size: 15px;
+  width: 15px;
 }
-footer .container .footer_liste .fa-hands-helping {
+footer .container .footer_liste i.fa-hands-helping {
   color: #D7D7D7;
-  font-size: 10px;
+  width: 10px;
 }
 footer .container a {
   color: #D7D7D7;
