taaille icones footer

--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -45,11 +45,11 @@ footer {
          
       i.fa-utensils {
         color : #D7D7D7 ; 
-        width : 15px ; 
+        font-size : 15px ; 
       }
       i.fa-hands-helping {
         color : #D7D7D7 ; 
-        width : 10px ; 
+        font-size : 10px ; 
       }
       
     }
