--- a/style.css
+++ b/style.css
@@ -365,11 +365,11 @@ footer .container .footer_liste {
 }
 footer .container .footer_liste i.fa-utensils {
   color: #D7D7D7;
-  width: 15px;
+  font-size: 15px;
 }
 footer .container .footer_liste i.fa-hands-helping {
   color: #D7D7D7;
-  width: 10px;
+  font-size: 10px;
 }
 footer .container a {
   color: #D7D7D7;
