--- a/style.css
+++ b/style.css
@@ -815,9 +815,12 @@ footer .container a {
 body #loading_spinner {
   background-color: #000000;
   box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   width: 100%;
-  height: 2280px;
-  position: absolute;
   z-index: 2;
   -moz-animation-duration: 3s;
   -webkit-animation-duration: 3s;
@@ -840,16 +843,6 @@ body #loading_spinner {
   -moz-animation-fill-mode: both;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
-}
-@media (min-width: 767px) {
-  body #loading_spinner {
-    height: 1720px;
-  }
-}
-@media screen and (min-width: 1000px) {
-  body #loading_spinner {
-    height: 1240px;
-  }
 }
 @keyframes loading_spinner {
   0% {
@@ -1077,6 +1070,9 @@ body #loading_spinner {
     opacity: 0.3;
   }
   20% {
+    opacity: 1;
+  }
+  95% {
     opacity: 1;
   }
   100% {
